html without ajax

--- a/main_page.html
+++ b/main_page.html
@@ -9,6 +9,7 @@
   <script type="text/javascript"
   src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
   </script>
+
   <div class="heading">
     <div class="image">
       <img src="https://www.evolbio.mpg.de/3137526/header_image-1474449073.jpg?t=eyJ3aWR0aCI6ODQ4LCJvYmpfaWQiOjMxMzc1MjZ9--8b53007891cfeb7a165dbf424bfd9e301cc95e23"/>
@@ -18,16 +19,18 @@
       <h3>The Clunio marinus Population Diferentiation Database</h3>
     </div>
   </div>
+
   <div class="navbar">
-    <nav>
-      <ul class="main_menu">
-        <li><a href="main_page.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="Fst.html">Calculate Fst</a></li>
-        <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
-        <li><a href="upload.html">Upload Files</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul class="main_menu">
+          <li><a href="main_page.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="Fst.html">Calculate Fst</a></li>
+          <li><a href="http://cluniobase.cibiv.univie.ac.at/home">ClunioBase</a></li>
+          <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
+        </ul>
+      </nav>
+      <a class="upload_button" href="upload.html"><button >Upload Files</button></a>
   </div>
 </head>
 
