--- a/main_page.html
+++ b/main_page.html
@@ -26,6 +26,7 @@
           <li><a href="main_page.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="Fst.html">Calculate Fst</a></li>
+          <li><a href="help.html">Help</a></li>
           <li><a href="http://cluniobase.cibiv.univie.ac.at/home">ClunioBase</a></li>
           <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
         </ul>
