finished getting all of the queries operational

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <p id="show_res">Show results</p>
       </div>
       <!--Table of results-->
-      <div class="results" id="results">
+      <div class="results" id="results">ssh
       </div>
     </div>
   </div>
@@ -259,4 +259,3 @@
 </div>
 </body>
 </html>
-
