--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav>
 	<ul class="main_menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://www.evolbio.mpg.de/biologicalclocks">About</a></li>
+          <li><a href="https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/about.py">About</a></li>
           <li><a href="help.html">Help</a></li>
           <li><a href="http://cluniobase.cibiv.univie.ac.at/home">ClunioBase</a></li>
           <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
