--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>CLUPDD</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="home.css">
   <script type="text/javascript"
   src="https://code.jquery.com/jquery-3.4.1.js">
   </script>
@@ -15,244 +15,80 @@
     </div>
     <div class="headertext">
       <h1>CLUPDD</h1>
-      <h3>The Clunio marinus Population Diferentiation Database</h3>
+      <h3>The Clunio Population Differentiation Database</h3>
     </div>
   </div>
-  <!--Script for download function-->
-  <script type="text/javascript">
-  function downloadCSV(csv, filename) {
-     var csvFile;
-     var downloadLink;
-     csvFile = new Blob([csv], {type: "text/csv"});
-     downloadLink = document.createElement("a");
-     downloadLink.download = filename;
-     downloadLink.href = window.URL.createObjectURL(csvFile);
-     downloadLink.style.display = "none";
-     document.body.appendChild(downloadLink);
-     downloadLink.click();
-  }
-  function exportTableToCSV(filename) {
-   var csv = [];
-   var rows = document.querySelectorAll("table tr");
-   for (var i = 0; i < rows.length; i++) {
-       var row = [], cols = rows[i].querySelectorAll("td, th");
-
-       for (var j = 0; j < cols.length; j++)
-           row.push(cols[j].innerText);
-
-       csv.push(row.join(","));
-   }
-   downloadCSV(csv.join("\n"), filename);
-  }
-  </script>
   <!--Navigation bar-->
   <div class="navbar">
       <nav>
-	<ul class="main_menu">
+	       <ul class="main_menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/about.py">About</a></li>
+          <li><a href="query.html">Query</a></li>
           <li><a href="help.html">Help</a></li>
           <li><a href="http://cluniobase.cibiv.univie.ac.at/home">ClunioBase</a></li>
           <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
         </ul>
       </nav>
-      <a class="download_button" onclick="exportTableToCSV('CLUPDD_Data.csv')"><button>Download</button></a>
   </div>
 </head>
 
 <body>
-  <!--Div to house query and results-->
-  <div class="search_display">
-    <h3>Query the database</h3>
-    <!--Div for holding queries-->
-    <div class="select_query">
-      <div class="select_query_buttons">
-        <button id="Regionbutton">Search by Region</button>
-        <button id="Genebutton">Search by Gene</button>
-        <button id="SNPbutton">Search by SNP</button>
-        <button id="Advancedbutton">Advanced Search</button>
-      </div>
-      <!--Query forms-->
-      <form id="search_snp">
-        Chromosome: <select id="s-chrom">
-         <option value="chr1">1</option>
-         <option value="chr2">2</option>
-         <option value="chr3">3</option>
-         </select>
-         Position: <input type="number" id="s-pos" />
-        <input type="submit" id="submit" value="Search" />
-      </form>
-      <form id="search_gene">
-         Gene name: <input type="radio" id="g-radio" value="name" name="g-radio">
-         Gene symbol: <input type="radio" id="g-radio" value="symbol" name="g-radio">
-         Gene: <input type="text" id="g-gene_name" />
-        <input type="submit" value="Search" />
-      </form>
-      <form id="search_region">
-        Chromosome: <select id="r-chrom">
-         <option value="chr1">1</option>
-         <option value="chr2">2</option>
-         <option value="chr3">3</option>
-         </select>
-         Start position: <input type="number" id="r-start_pos" />
-         End position: <input type="number" id="r-end_pos" />
-        <input type="submit" value="Search" />
-      </form>
-      <form id="advanced_search">
-        <p style="font-weight: 600;">Advanced search allows for more flexible queries but will run slower</p>
-        <p>Help on queries can be found in the about page</p>
-        <textarea id="advanced_query" rows="6" cols="70"></textarea>
-        <br></br>
-       <input type="submit" value="Search" />
-    </form>
-    <!--Script for opening and closing query forms-->
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $("#search_snp").hide();
-        $("#search_gene").hide();
-        $("#search_region").hide();
-        $("#advanced_search").hide();
-        $('#SNPbutton').click(function(){
-              $("#search_snp").toggle();
-              $("#search_gene").hide();
-              $("#search_region").hide();
-              $("#advanced_search").hide();
-           });
-         $('#Genebutton').click(function(){
-               $("#search_gene").toggle();
-               $("#search_snp").hide();
-               $("#search_region").hide();
-               $("#advanced_search").hide();
-            });
-            $('#Regionbutton').click(function(){
-                  $("#search_region").toggle();
-                  $("#search_gene").hide();
-                  $("#search_snp").hide();
-                  $("#advanced_search").hide();
-              });
-            $('#Advancedbutton').click(function(){
-                  $("#advanced_search").toggle();
-                  $("#search_region").hide();
-                  $("#search_gene").hide();
-                  $("#search_snp").hide();
-               });
-          });
-      </script>
-    </div>
-    <!--Div for housing results-->
-    <div class="results_container" id="results_container">
-      <!--Showing/hiding results-->
-      <div class="toggle_results">
-        <p id="hide_res">Hide results</p>
-        <p id="show_res">Show results</p>
-      </div>
-      <!--Table of results-->
-      <div class="results" id="results">
-      </div>
+  <div class='welcome_container'>
+    <div class="welcome">
+      <h1>Welcome To CLUPDD</h1>
+      <h3>The Clunio Population Differentiation Database</h3>
     </div>
   </div>
-<!--script for showing results and AJAX-->
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#results_container').hide();
-    $("#show_res").hide();
-    $("#hide_res").click(function(){
-      $("#hide_res").hide();
-      $("#show_res").show();
-      $("#results").hide();
-    });
-    $("#show_res").click(function(){
-      $("#show_res").hide();
-      $("#hide_res").show();
-      $("#results").show();
-    });
-    $("#search_snp").on('submit', function(event){
-      event.preventDefault();
-      $('#results_container').show();
-      $("#results").show()
-      getSnpResultRows();
-      });
-    $("#search_gene").on('submit', function(event){
-      event.preventDefault();
-      $('#results_container').show();
-      $("#results").show()
-      getGeneResultRows();
-      });
-    $("#search_region").on('submit', function(event){
-      event.preventDefault();
-      $('#results_container').show();
-      $("#results").show()
-      getRegionResultRows();
-      });
-    $("#advanced_search").on('submit', function(event){
-      event.preventDefault();
-      $('#results_container').show();
-      $("#results").show()
-      getAdvancedResultRows();
-      });
-    });
-     var getSnpResultRows = function(){
-       chrom = $("#s-chrom").val();
-       pos = $("#s-pos").val();
-       $.ajax({
-          url: 'https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/CLUPDD_main_query.py',
-          type: 'get',
-          data: {'submit':'submitsnp','chromosome':chrom, 'position':pos},
-          success: function(response){
-          $("#results").empty();
-          $("#results").append(response);
-        }
-      });
-     };
-      var getGeneResultRows = function(){
-        gene = $("#g-gene_name").val();
-        radio = $("#g-radio").val();
-        $.ajax({
-           url: 'https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/CLUPDD_main_query.py',
-           type: 'get',
-           data: {'submit':'submitgene','gene':gene,'radio':radio},
-           success: function(response){
-           $("#results").empty();
-           $("#results").append(response);
-         }
-       });
-      };
-       var getRegionResultRows = function(){
-         chrom = $("#r-chrom").val();
-         start = $("#r-start_pos").val();
-         end = $("#r-end_pos").val();
-         $.ajax({
-            url: 'https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/CLUPDD_main_query.py',
-            type: 'get',
-            data: {'submit':'submitregion','chromosome':chrom, 'start':start, 'end':end}, //send to the program
-            success: function(response){
-            $("#results").empty();
-            $("#results").append(response);
-          }
-        });
-       };
-         var getAdvancedResultRows = function(){
-           query = $("#advanced_query").val();
-           $.ajax({
-              url: 'https://bioed.bu.edu/cgi-bin/students_21/group_proj/group_C/CLUPDD_main_query.py',
-              type: 'get',
-              data: {'submit':'submitadvanced','query':query}, //send to the program
-              success: function(response){
-              $("#results").empty();
-              $("#results").append("<h3>"+query+"</h3>");
-              $("#results").append(response);
-            }
-          });
-         };
-</script>
-<!--jbrowse-->
-<div class="jbrowse">
-  <iframe
-      src="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html"
-      style="border: 1px solid black"
-      width="600"
-      height="600">
-  </iframe>
-</div>
-</body>
-</html>
+  <div class="main_container">
+    <div class='info_block' id="info_block1">
+      <div class="text">
+        <h3>What are Clunio?</h3>
+        <div class="p">
+          <p>Clunio are a genus of non-biting midges that are found living in the intertidal zone of coasts all over the world. Many species have evolved to sychronize their mating with the lowest tides of the month, during the full moon or new moon, so that they can lay their eggs on the exposed rocks. Clunio marinus has long been a model organism for studying biological clocks, population genetics, and adaptation.</p>
+        </div>
+      </div>
+      <div class="image" id="image1">
+        <img src="https://bioed.bu.edu/images/students_21/group_proj/group_C/clunio_mating.jpeg"/>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div class='info_block' id="info_block2">
+      <div class="image" id="image2">
+        <img src="https://bioed.bu.edu/images/students_21/group_proj/group_C/moon.JPG"/>
+      </div>
+      <div class="text">
+        <h3>What is CLUPDD?</h3>
+        <div class="p">
+          <p> CLUPDD is a databse that houses and links population variant (SNP) data, the calculated effects that those variants have, and the genes that those variants impact. It is inteded to be a tool used by researchers studying the evolution and population genetics of Clunio, or anyone curious to learn more about genetic variation.</p>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div class='info_block' id="info_block3">
+      <div class="text">
+        <h3>What can you do with CLUPDD?</h3>
+        <div class="p">
+          <p>To use the database head to the Query page, or to explore the genome check out the JBrowse tab. There are currently four ways to search the database. Search by Region to find all SNPs and genes within a region of the genome. Search by Gene will return all SNPs in the gene and it's GO terms. Search by SNP to see the genomic features your SNP could affect, and the alternate allele frequencies in each population. Finally, use Advanced Search to query the database directly with MySQL language.</p>
+        </div>
+      </div>
+      <div class="image" id="image3">
+        <img src="https://bioed.bu.edu/images/students_21/group_proj/group_C/shore.JPG"/>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div id="developers_info">
+    <p> The CLUPDD webpage and database was created and maintained by Marina Natividad Avila, Alexander Jacobsen, and Yichi Zhang under the advisement of Dr. Tobias Kasier. This project was developed at Boston University as part of BF768, Spring 2021, G. Benson instructor. All data was produced by the lab of Dr. Tobias Kaiser. More information about Dr. Kaiser's work at Max Planck, or the BU bioinformatics program can be found by clicking on the images below.</p>
+  </div>
+  <div id="links">
+    <div class="link" id="mpg_link">
+      <a href="https://www.evolbio.mpg.de/biologicalclocks">
+        <img src="https://www.wissenschafftzukunft-kiel.de/fileadmin/_processed_/csm_max-planck-gesellschaft.svg_ba063e17a6.png"/>
+      </a>
+    </div>
+    <div class="link" id='bu_link'>
+      <a href='http://www.bu.edu/bioinformatics/'>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogos-download.com%2Fwp-content%2Fuploads%2F2020%2F06%2FBoston_University_Logo.png&f=1&nofb=1"/>
+      </a>
+    </div>
+  </div>
