--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="text">
         <h3>What are Clunio?</h3>
         <div class="p">
-          <p>Clunio are a genus of non-biting midges that are found living in the intertidal zone of coasts all over the world. Many species have evolved to sychronize their mating with the lowest tides of the month, during the full moon or new moon, so that they can lay their eggs on the exposed rocks. Clunio marinus has long been a model organism for studying biological clocks, population genetics, and adaptation.</p>
+          <p>Clunio are a genus of non-biting midges that are found living in the intertidal zone of coasts all over the world. Many species have evolved to synchronize their mating with the lowest tides of the month, during the full moon or new moon, so that they can lay their eggs on the exposed rocks. Clunio marinus has long been a model organism for studying biological clocks, population genetics, and adaptation.</p>
         </div>
       </div>
       <div class="image" id="image1">
@@ -59,7 +59,7 @@
       <div class="text">
         <h3>What is CLUPDD?</h3>
         <div class="p">
-          <p> CLUPDD is a databse that houses and links population variant (SNP) data, the calculated effects that those variants have, and the genes that those variants impact. It is inteded to be a tool used by researchers studying the evolution and population genetics of Clunio, or anyone curious to learn more about genetic variation.</p>
+          <p> CLUPDD is a databse that houses and links population variant (SNP) data, the calculated effects that those variants have, and the genes that those variants impact. It is intended to be a tool used by researchers studying the evolution and population genetics of Clunio, or anyone curious to learn more about genetic variation.</p>
         </div>
       </div>
       <div class="clear"></div>
@@ -68,7 +68,7 @@
       <div class="text">
         <h3>What can you do with CLUPDD?</h3>
         <div class="p">
-          <p>To use the database head to the Query page, or to explore the genome check out the JBrowse tab. There are currently four ways to search the database. Search by Region to find all SNPs and genes within a region of the genome. Search by Gene will return all SNPs in the gene and it's GO terms. Search by SNP to see the genomic features your SNP could affect, and the alternate allele frequencies in each population. Finally, use Advanced Search to query the database directly with MySQL language.</p>
+          <p>To use the database, head to the Query page or to explore the genome, check out the JBrowse tab. There are currently four ways to search the database. Search by Region to find all SNPs and genes within a region of the genome. Search by Gene will return all SNPs in the gene and its GO terms. Search by SNP to see the genomic features your SNP could affect, and the alternate allele frequencies in each population. Finally, use Advanced Search to query the database directly with MySQL language.</p>
         </div>
       </div>
       <div class="image" id="image3">
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div id="developers_info">
-    <p> The CLUPDD webpage and database was created and maintained by Marina Natividad Avila, Alexander Jacobsen, and Yichi Zhang under the advisement of Dr. Tobias Kasier. This project was developed at Boston University as part of BF768, Spring 2021, G. Benson instructor. All data was produced by the lab of Dr. Tobias Kaiser. More information about Dr. Kaiser's work at Max Planck, or the BU bioinformatics program can be found by clicking on the images below.</p>
+    <p> The CLUPDD webpage and database was created and maintained by Marina Natividad Avila, Alexander Jacobsen, and Yichi Zhang under the advisement of Dr. Tobias Kasier. This project was developed at Boston University as part of BF768, Spring 2021, G. Benson instructor. All data were produced by the lab of Dr. Tobias Kaiser. More information about Dr. Kaiser's work at Max Planck, or the BU bioinformatics program can be found by clicking on the images below.</p>
   </div>
   <div id="links">
     <div class="link" id="mpg_link">
