--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div id="developers_info">
-    <p> The CLUPDD webpage and database was created and maintained by Marina Natividad Avila, Alexander Jacobsen, and Yichi Zhang under the advisement of Dr. Tobias Kasier. This project was developed at Boston University as part of BF768, Spring 2021, G. Benson instructor. All data were produced by the lab of Dr. Tobias Kaiser. More information about Dr. Kaiser's work at Max Planck, or the BU bioinformatics program can be found by clicking on the images below.</p>
+    <p> The CLUPDD webpage and database was created and maintained by <a href="mailto:marinant@bu.edu">Marina Natividad-Avila</a>, <a href="mailto:aggjacob@bu.edu">Alexander Jacobsen</a>, and <a href="mailto:yiz370@bu.edu">Yichi Zhang</a> under the advisement of Dr. Tobias Kasier. This project was developed at Boston University as part of BF768, Spring 2021, G. Benson instructor. All data were produced by the lab of Dr. Tobias Kaiser. More information about Dr. Kaiser's work at Max Planck, or the BU bioinformatics program can be found by clicking on the images below.</p>
   </div>
   <div id="links">
     <div class="link" id="mpg_link">
