--- a/query.html
+++ b/query.html
@@ -54,7 +54,7 @@
       <nav>
 	<ul class="main_menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="Query.html">Query</a></li>
+          <li><a href="query.html">query</a></li>
           <li><a href="help.html">Help</a></li>
           <li><a href="http://cluniobase.cibiv.univie.ac.at/home">ClunioBase</a></li>
           <li><a href="https://bioed.bu.edu/students_21/group_proj/group_C/jbrowse/index.html">Jbrowse</a></li>
